k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: te-data-generator-backend
  namespace: korea
  labels:
    app: te-data-generator
    component: backend
    owner/name: korea
    owner/purpose: develop
  annotations:
    description: "This deployment is used for korea team"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: te-data-generator
      component: backend
  template:
    metadata:
      labels:
        app: te-data-generator
        component: backend
    spec:
      containers:
      - name: backend
        image: docker-ta-inner.thinkingdata.cn/korea/data-generator-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          name: http
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
        volumeMounts:
        - name: data
          mountPath: /app/output
        - name: logbus
          mountPath: /app/../logbus 2
      volumes:
      - name: data
        emptyDir: {}
      - name: logbus
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: te-data-generator-frontend
  namespace: korea
  labels:
    app: te-data-generator
    component: frontend
    owner/name: korea
    owner/purpose: develop
  annotations:
    description: "This deployment is used for korea team"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: te-data-generator
      component: frontend
  template:
    metadata:
      labels:
        app: te-data-generator
        component: frontend
        owner/name: korea
        owner/purpose: develop
      annotations:
        description: "This pod is used for korea team"
    spec:
      containers:
      - name: frontend
        image: docker-ta-inner.thinkingdata.cn/korea/data-generator-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
